free tabs when mallac fail

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: rcepre <rcepre@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/07/16 09:13:44 by rcepre            #+#    #+#              #
-#    Updated: 2018/10/10 11:11:14 by rcepre           ###   ########.fr        #
+#    Updated: 2018/10/10 17:56:09 by rcepre           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 # **************************************************************************** #
@@ -94,8 +94,9 @@ SRC = 	ft_atoi.c\
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	@ar rc $@ $?
+	@ar ruc $@ $?
 	@ranlib $@
+	@echo "added to library: $?"
 
 .PHONY: clean fclean re
 
